# PFNN-TVM

./: .gitignore  CMakeLists.txt  README.md
cmake/: AndroidCrossCompile.cmake
python/: gen_cache_block_json.py  gen_model_data.py  gen_static_tvminfer_lib.py
python/config/: android_config.py  linux_config.py
python/template/ansor/: ansor_interpA_template.py  ansor_interpB_template.py
python/template/autoTVM/: autotvm_interpA_extern_xsmm_template.py  autotvm_interpA_template.py  autotvm_interpB_template.py
python/template/manual/: tvm_activation_template.py  tvm_interpA_extern_libxsmm_template.py  tvm_interpA_extern_xsmm_template.py  tvm_interpA_template.py  tvm_interpB_template.py
python/utils/: performance_replay.py  tune_task.py
python/utils/xsmm_utils/: gen_xsmm_instrinsic_armv8_code.py  tvm_extern_xsmm.py
scripts/android/: adb_push.sh  build.sh  tune.sh
scripts/linux/: build.sh  tune.sh
src/: benchmark.cpp
src/pfnn_tvm_src/: BaseInfer.cpp  BaseInfer.hpp  EigenInfer.cpp  EigenInfer.hpp  TVMInfer.cpp  TVMInfer.hpp  pfnn_benchmark.cpp  pfnn_benchmark.hpp  timer.h
tuned_logs/730G_tuned_logs/logs_interpA_autoTVM/: tune_M1_N256_K1032.log.tmp  tune_M1_N256_K256.log.tmp  tune_M1_N912_K256.log.tmp  tune_M5_N256_K1032.log.tmp  tune_M5_N256_K256.log.tmp  tune_M5_N912_K256.log.tmp  tune_M8_N256_K1032.log.tmp  tune_M8_N256_K256.log.tmp  tune_M8_N912_K256.log.tmp
tuned_logs/730G_tuned_logs/logs_interpA_autoTVM_xsmm/: tune_M1_N256_K1032.log.tmp  tune_M1_N256_K256.log.tmp  tune_M1_N912_K256.log.tmp  tune_M5_N256_K1032.log.tmp  tune_M5_N256_K256.log.tmp  (+4 more)
(+36 files in other folders)
